--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,29 @@
 	html {
 		font-family: "Rubik", sans-serif;
 	}
+	.avatar {
+		border-width: 2px !important;
+	}
+
+	.avatar.placeholder p {
+		font-size: 14px !important;
+	}
+
+	.avatar.border-0 {
+		border-width: 0 !important;
+	}
+
+	.search-form .btn {
+		border-radius: 0 2px 2px 0 !important;
+	}
+
+	.search-form .input {
+		border-radius: 2px 0 0 2px !important;
+	}
+
+	*:focus {
+		border-color: inherit;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+	}
 }
