--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,9 +28,8 @@
 		border-radius: 2px 0 0 2px !important;
 	}
 
-	*:focus {
-		border-color: inherit;
-		-webkit-box-shadow: none;
-		box-shadow: none;
+	.footer-title {
+		color: #ffffff !important;
+		opacity: 0.8 !important;
 	}
 }
